Finished footer section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="action-center">
                 <div class="action-box">
                     <div>
-                        <div>
+                        <div class="action-call">
                             Call to action! It's time!
                         </div>
                         Sign up for our product by clicking that button right over there!
